--- a/style.css
+++ b/style.css
@@ -64,15 +64,13 @@ body{
   font-weight: bold;
 }
 
+
 .answer{
   display: none;
   color: var(--Grayish-purple);
   font-weight: 500;
 }
 
-.answer.active{
-  display: flex;
-}
 
 .q-div{
   display: flex;
@@ -82,10 +80,15 @@ body{
   /* text-align: left; */
 }
 
+.answer.active{
+  display: flex;
+}
+
 .answer-div{
   padding: 8px;
   margin-bottom: 0px;
   text-align: left;
+  /* display: none; */
 }
 
 .question{
